# SD_Image_Synchronizer_PE

./: CMakeLists.txt  Main.qml  main.cpp  settings.gradle.kts  syncclient.cpp  syncclient.h
android/: AndroidManifest.xml
app/: build.gradle.kts
app/src/androidTest/java/com/ice/sd_image_synchronizer_pe/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ice/sd_image_synchronizer_pe/: MainActivity.kt  SyncManager.kt  SyncService.kt
app/src/main/java/com/ice/sd_image_synchronizer_pe/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/ice/sd_image_synchronizer_pe/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
